完成 反馈页面

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -19,4 +19,6 @@
     <string name="tab_item_hot">Hot</string>
     <string name="tab_item_popularity">Popularity</string>
     <string name="tab_item_newly">Newly</string>
+
+    <string name="contact_us">Contact Us:\n\nxtorrent9527@gmail.com</string>
 </resources>
