--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -20,5 +20,17 @@
     <string name="tab_item_popularity">Popularity</string>
     <string name="tab_item_newly">Newly</string>
 
+    <string name="button_copy_magnet">Copy magnet link</string>
+    <string name="button_download_resource">Download resource</string>
+    <string name="text_type">Type</string>
+    <string name="text_size">Size</string>
+    <string name="text_files">Files</string>
+    <string name="text_downloads">Downloads</string>
+    <string name="text_updated">Updated</string>
+    <string name="text_created">Created</string>
+    <string name="text_include_files">Include files</string>
+    <string name="toast_copied">Copied</string>
+    <string name="toast_no_apps_found">No apps found</string>
+
     <string name="contact_us">Contact Us:\n\nxtorrent9527@gmail.com</string>
 </resources>
