修改 换回中文文案

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,36 +1,36 @@
 <resources>
-    <string name="app_name">Xtorrent</string>
+    <string name="app_name">X 磁力</string>
 
-    <string name="text_empty">Empty</string>
-    <string name="text_error_tips">Network error. Click to reload.</string>
-    <string name="button_retry">Retry</string>
-    <string name="text_end">&#045;&#032;The End&#032;&#045;</string>
+    <string name="text_empty">没有数据</string>
+    <string name="text_error_tips">网络错误，请重试</string>
+    <string name="button_retry">点击重试</string>
+    <string name="text_end">&#045;&#032;已加载全部数据&#032;&#045;</string>
 
-    <string name="drawer_open">Open</string>
-    <string name="drawer_close">Close</string>
-    <string name="hint_search">Search</string>
+    <string name="drawer_open">打开</string>
+    <string name="drawer_close">关闭</string>
+    <string name="hint_search">搜索</string>
 
-    <string name="drawer_menu_home">Home</string>
-    <string name="drawer_menu_trend">Trend</string>
-    <string name="drawer_menu_movies">Movie</string>
-    <string name="drawer_menu_settings">Settings</string>
-    <string name="drawer_menu_feedback">Feedback</string>
+    <string name="drawer_menu_home">主页</string>
+    <string name="drawer_menu_trend">趋势</string>
+    <string name="drawer_menu_movies">电影</string>
+    <string name="drawer_menu_settings">设置</string>
+    <string name="drawer_menu_feedback">反馈</string>
 
-    <string name="tab_item_hot">Hot</string>
-    <string name="tab_item_popularity">Popularity</string>
-    <string name="tab_item_newly">Newly</string>
+    <string name="tab_item_hot">热门下载</string>
+    <string name="tab_item_popularity">编辑推荐</string>
+    <string name="tab_item_newly">最新资源</string>
 
-    <string name="button_copy_magnet">Copy magnet link</string>
-    <string name="button_download_resource">Download resource</string>
-    <string name="text_type">Type</string>
-    <string name="text_size">Size</string>
-    <string name="text_files">Files</string>
-    <string name="text_downloads">Downloads</string>
-    <string name="text_updated">Updated</string>
-    <string name="text_created">Created</string>
-    <string name="text_include_files">Include files</string>
-    <string name="toast_copied">Copied</string>
-    <string name="toast_no_apps_found">No apps found</string>
+    <string name="button_copy_magnet">复制磁力链接</string>
+    <string name="button_download_resource">立即下载</string>
+    <string name="text_type">类型</string>
+    <string name="text_size">文件尺寸</string>
+    <string name="text_files">文件数</string>
+    <string name="text_downloads">下载次数</string>
+    <string name="text_updated">更新于</string>
+    <string name="text_created">创建于</string>
+    <string name="text_include_files">包含文件</string>
+    <string name="toast_copied">已复制</string>
+    <string name="toast_no_apps_found">找不到可以打开的应用</string>
 
-    <string name="contact_us">Contact Us:\n\nxtorrent9527@gmail.com</string>
+    <string name="contact_us">联系我们：\n\nxtorrent9527@gmail.com</string>
 </resources>
